-Fixed some UI bugs that weren't working properly on different screen sizes    -Font-sizes were improperly changing based on screen width    -Iframes were misaligned on taller screen resolution
-Added tooltip for types section of add-expense

--- a/styles/add-expense.css
+++ b/styles/add-expense.css
@@ -2,7 +2,6 @@ main {
     padding: 30px 20px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
     row-gap: 14px;
 }
 
@@ -30,8 +29,6 @@ input {
 }
 
 
-
-
 .product-section{
     display: grid;
     grid-template-columns: 1.1fr 10fr;
@@ -40,10 +37,12 @@ input {
     
 }
 
+
 .dropdown{
     position: relative;
     width: 130px;
 }
+
 
 .dropdown-button{
     width: 100%;
@@ -56,9 +55,34 @@ input {
     background-color: rgb(20, 69, 99);
     color: white;
     
-
+    
     cursor: pointer;
     z-index: 200;
+
+}
+
+.dropdown-button::before{
+    content: "This is the type of medical expense you are adding.";
+    position: absolute;
+    top: -60px;
+    left: 0px;
+    border-radius: 5px;
+    padding: 4px;
+    opacity: 0;
+
+
+    font-size: 14px;
+    
+
+    background-color: lightgray;
+
+    
+
+}
+
+.dropdown-button:hover::before{
+    opacity: 1;
+    transition-delay: 1s;
 }
 
 
@@ -81,7 +105,6 @@ input {
 
 
     cursor: default;
-    overflow: scroll;
     z-index: 100;
 
 }
@@ -102,6 +125,8 @@ input {
     opacity: 78%;
 
 }
+
+
 
 .dropdown-content p{
     width: 95%;
